--- a/build.properties
+++ b/build.properties
@@ -34,7 +34,7 @@
 # |maven.build.testDir									Location  of test classes 
 # |maven.build.testResourceDir				Location of test resources	
 # |maven.build.testOutputDir					Location of test class compilation
-# |maven.test.reports									Where test reports (from JUNIT) will be located. 
+# |maven.test.reports									Where test reports (from JUNIT) will be located 
 # |maven.build.pmddir								Location where PMD rules and XSL will belocated. 
 # |maven.reporting.outputDirectory		Location of reports from PMD
 # |project.3rdpartylibdir								lib under build.basesrcdir
